<resources>

    <string name="app_name">八字称骨占卜</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_destiny">八字称骨占卜</string>
    <string name="enterCG">进入称骨算命</string>
    <string name="originCG">称骨由来</string>
    <string name="cgName">中文姓名</string>
    <string name="cgCalendar">历法</string>
    <string name="cgLunar">农历/阴历</string>
    <string name="cgSolar">公历/阳历</string>
    <string name="cgSex">性别</string>
    <string name="cgMan">先生</string>
    <string name="cgWoman">女士</string>
    <string name="cgOther">其他</string>
    <string name="cgEightText"> 您的生辰八字： \n &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="cgBirthday">出生日期</string>
    <string name="cgBirthdayLunar">农历生日</string>
    <string name="longName">请保持姓名长度在四个汉字以内</string>
    <string name="longYear">请输入正确的年份</string>
    <string name="empty">请将信息填写完整</string>
    <string name="cgSubmit">称骨占卜</string>
    <string name="cgResultList">称骨记录</string>
    <string name="imageDestiny">命运低纸</string>
    <string name="r_cg_song">称骨歌</string>
    <string name="r_cg_weight">骨重：</string>
    <string name="r_cg_weight_unit">两</string>
    <string name="r_cg_success">保存数据成功</string>
    <string name="r_cg_exist1">您以于</string>
    <string name="r_cg_exist2">将用户数据存入，请勿重复存储</string>
    <string name="r_cg_miss">数据丢失，请重操作</string>
    <string name="imageButton">图片按钮</string>
    <string name="cg_userlist">称骨记录(长按删除)</string>
    <string name="cg_delete_button">清除全部记录</string>
    <string name="cg_delete_msg">确定删除称骨记录？</string>
    <string name="cg_delete_success">记录删除成功</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="notExistUserList">不存在查询记录</string>
    

</resources>