<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cg_backgroud"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView 
        style="@style/cg_user_style"
        android:id="@+id/cgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgName"/>
    <EditText
        android:id="@+id/cgNameE"
        android:layout_below="@id/cgName" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="18sp" >
    </EditText>
    <TextView 
        android:id="@+id/cgSex"
        style="@style/cg_user_style"
        android:layout_below="@id/cgNameE" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgSex"/>
    <RadioGroup 
        android:id="@+id/cgRadioGroup"
        android:layout_below="@id/cgSex" 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RadioButton 
        	style="@style/cg_user_style"
            android:id="@+id/cgMan"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgMan"
            />
        <RadioButton 
        	style="@style/cg_user_style"
            android:id="@+id/cgWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgWoman"
            />
        <RadioButton 
        	style="@style/cg_user_style"
            android:id="@+id/cgOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgOther"
            />
    </RadioGroup>
    <TextView 
        android:id="@+id/cgCalendar"
        style="@style/cg_user_style"
        android:layout_below="@id/cgRadioGroup" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgCalendar"/>
    <RadioGroup 
        android:id="@+id/cgRadioGroup_cgCalendar"
        android:layout_below="@id/cgCalendar" 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RadioButton 
            android:id="@+id/cgLunar"
        	style="@style/cg_user_style"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgLunar"
            />
        <RadioButton 
        	style="@style/cg_user_style"
            android:id="@+id/cgSolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgSolar"
            />
    </RadioGroup>
    <TextView 
        android:id="@+id/cgBirthday"
        style="@style/cg_user_style"
        android:layout_below="@id/cgRadioGroup_cgCalendar" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgBirthday"/>
    <Button
        android:id="@+id/cgDate"
        android:layout_below="@id/cgBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/cgTime"
        android:layout_below="@id/cgBirthday" 
        android:layout_toRightOf="@id/cgDate" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/cgSubmit"
        android:layout_below="@id/cgDate" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/cgResultList"
        android:layout_below="@id/cgSubmit" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Button>
</RelativeLayout>
