<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cg_backgroud"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <ImageView android:id="@+id/r_cg_imageDestiny"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/imageDestiny"/>
    <TextView android:id="@+id/r_cg_name"
        style="@style/cg_user_style"
        android:layout_alignTop="@id/r_cg_imageDestiny"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/r_cg_song"
        style="@style/cg_result_style"
        android:lineSpacingExtra="2dp"
        android:layout_below="@id/r_cg_name" 
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_cg_song"/>
    <TextView android:id="@+id/r_cg_destiny"
        style="@style/cg_result_style"
        android:lineSpacingExtra="2dp"
        android:layout_below="@id/r_cg_song" 
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/r_cg_weight"
        style="@style/cg_result_style"
        android:lineSpacingExtra="2dp"
        android:layout_below="@id/r_cg_destiny" 
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/cgSave"
        android:layout_below="@id/r_cg_weight" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cg_save"
        android:contentDescription="@string/imageButton">
    </ImageButton>
    <ImageButton
        android:id="@+id/cgDes"
        android:layout_below="@id/r_cg_weight" 
        android:layout_toRightOf="@id/cgSave" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cg_des"
        android:contentDescription="@string/imageButton">
    </ImageButton>
    <ImageButton
        android:id="@+id/cgShare"
        android:layout_below="@id/r_cg_weight" 
        android:layout_toRightOf="@id/cgDes" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cg_share"
        android:contentDescription="@string/imageButton">
    </ImageButton>
</RelativeLayout>
